hermes-macros/tests/compile-fail/incorrect_runtime.stderr
error: the `async` keyword is missing from the function declaration
 --> tests/compile-fail/incorrect_runtime.rs:4:1
  |
4 | fn non_async_function() {
  | ^^

error[E0433]: failed to resolve: use of undeclared crate or module `tokio`
 --> tests/compile-fail/incorrect_runtime.rs:3:1
  |
3 | #[hermes_macros::runtime]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared crate or module `tokio`
  |
  = note: this error originates in the attribute macro `hermes_macros::runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
  |
1 + use std::thread::Builder;
  |

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile-fail/incorrect_runtime.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compile-fail/incorrect_runtime.rs`
